Updates and code improvements.
