# app/Http/Controllers/UserController.php
@@ -2,23 +2,39 @@
 
 namespace App\Http\Controllers;
 
-
-use App\Models\FileUpload;
-use App\Models\Project;
+use App\Http\Resources\UserCollection;
 use App\Models\User;
 use App\Notifications\UserAdded;
 use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
-use Illuminate\Support\Facades\Route;
 use Ramsey\Uuid\Uuid;
+use Symfony\Component\HttpFoundation\BinaryFileResponse;
 
 class UserController extends Controller
 {
     public function index()
     {
         return view('team.index')->with('user', Auth::user());
+    }
+
+    /**
+     *  * @OA\Get(
+     *     path="/api/users",
+     *     summary="get users list",
+     *     @OA\Response(
+     *          response="200",
+     *          description="success"
+     *     )
+     * )
+     * @return JsonResponse
+     */
+    public function getLists(): \Illuminate\Http\JsonResponse
+    {
+        $user = Auth::user();
+
+        return response()->json(new UserCollection($user->teammates()));
     }
 
     public function store(Request $request): \Illuminate\Http\JsonResponse
@@ -34,7 +50,6 @@ class UserController extends Controller
         $user->notify(new UserAdded($user));
 
         return response()->json(['status' => 'success', 'user' => $user]);
-
     }
 
     public function update(Request $request, $id): \Illuminate\Http\JsonResponse
@@ -58,10 +73,8 @@ class UserController extends Controller
                 $user->save();
                 return response()->json(['status' => 'success', 'message' => 'User profile has been successfully updated.']);
             } catch (\Exception $e) {
-                dd($e->getMessage());
                 return response()->json(['status' => 'error', 'message' => 'Error while updating user profile.']);
             }
-
         } else {
             return $this->handleUnauthorizedJsonResponse();
         }
@@ -69,12 +82,12 @@ class UserController extends Controller
 
     public function destroy($id): \Illuminate\Http\JsonResponse
     {
-
         $user = User::find($id);
 
         if (!$user) {
             return response()->json(['status' => 'error', 'message' => 'Unable to find user.']);
         }
+
 
         if (\auth()->user()->can('delete', Auth::user(), $user)) {
             $user->delete();
@@ -82,12 +95,11 @@ class UserController extends Controller
         } else {
             return $this->handleUnauthorizedJsonResponse();
         }
-
     }
 
     public function setPassword($uuid)
     {
-        $user = User::where('uuid', $uuid)->first();
+        $user = User::byUuid($uuid);
 
         if (!$user) {
             abort(404);
@@ -102,7 +114,7 @@ class UserController extends Controller
 
     public function updatePassword(Request $request, $uuid): \Illuminate\Http\RedirectResponse
     {
-        $user = User::where('uuid', $uuid)->first();
+        $user = User::byUuid($uuid);
 
         $user->password = Hash::make($request->get('password'));
         $user->email_verified_at = Carbon::now();
@@ -133,9 +145,9 @@ class UserController extends Controller
         return view('user.profile')->with('user', Auth::user());
     }
 
-    public function uploadAvatar($uuid, Request $request): \Illuminate\Http\JsonResponse
+    public function uploadAvatar(Request $request, $uuid): \Illuminate\Http\JsonResponse
     {
-        $user = User::where('uuid', $uuid)->first();
+        $user = User::byUuid($uuid);
 
         if ($request->hasFile('file')) {
             $file = $request->file('file');
